[package]
name = "sofinco-antiforensic"
version = "7.0.0"
edition = "2021"
authors = ["levouinse <sofinco@proton.me>"]
description = "Advanced anti-forensic toolkit with memory encryption and stealth capabilities"
license = "GPL-3.0"
repository = "https://github.com/levouinse/sofinco-antiforensic"
homepage = "https://github.com/levouinse/sofinco-antiforensic"
keywords = ["security", "forensics", "privacy", "encryption"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sofinco"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rayon = "1.10"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha3 = "0.10"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
